--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Professional Question Bank</title>
+    <title>ETIHAD</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -155,8 +155,8 @@
                 <!-- Header -->
                 <div class="row align-items-center mb-4">
                     <div class="col-md-6">
-                        <h1><i class="fas fa-brain"></i> Question Bank</h1>
-                        <p class="text-muted">500+ questions | Professional Edition</p>
+                        <h1><i class="fas fa-brain"></i> ETIHAD CP</h1>
+                        <p class="text-muted">K-TECH</p>
                     </div>
                     <div class="col-md-6 text-end">
                         <button onclick="logout()" class="btn btn-outline-secondary">
