--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                     | <span id="questionCount">0</span> Questions | 
                     <span id="categoryCount">7</span> Categories
                 </p>
-                <small>Professional pilot certification preparation © 2024</small>
+                <small>Professional pilot certification preparation © K-TECH 2026</small>
             </div>
         </div>
     </div>
