--- a/index.html
+++ b/index.html
@@ -396,7 +396,12 @@
 
             <!-- Footer -->
             <div class="footer-note">
-                <small>Professional pilot certification preparation © K-TECH 2026</small>
+                <p class="mb-2">
+                    <i class="fas fa-plane"></i> ETIHAD CP Aviation Training System 
+                    | <span id="questionCount">0</span> Questions | 
+                    <span id="categoryCount">7</span> Categories
+                </p>
+                <small>Professional pilot certification preparation © 2024</small>
             </div>
         </div>
     </div>
