--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ETIHAD CP - Aviation Certification</title>
+    <title>ETIHAD CP - Aviation</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -388,7 +388,7 @@
                     | <span id="questionCount">0</span> Questions | 
                     <span id="categoryCount">7</span> Categories
                 </p>
-                <small>Professional pilot certification preparation © 2024</small>
+                <small>Professional pilot certification preparation © K-TECH</small>
             </div>
         </div>
     </div>
