--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
 
     <!-- Image Viewer Modal -->
     <div class="modal fade" id="imageViewer" tabindex="-1">
-        <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-dialog modal-xl modal-dialog-centered"> <!-- Changed modal-lg to modal-xl -->
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">
@@ -498,14 +498,15 @@
                     </h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
-                <div class="modal-body text-center p-3">
-                    <img id="enlargedImage" src="" class="img-fluid" style="max-height: 70vh; border-radius: 8px;">
+                <div class="modal-body text-center p-3" style="background: #f0f2f5;"> <!-- Added background -->
+                    <img id="enlargedImage" src="" class="img-fluid" 
+                         style="max-height: 90vh; width: auto; border-radius: 8px; box-shadow: 0 4px 20px rgba(0,0,0,0.2);"> <!-- Increased to 90vh -->
                 </div>
                 <div class="modal-footer">
                     <small id="imageFileName" class="text-muted me-auto">
                         <i class="fas fa-file-image me-1"></i> <span id="imageNameText">No image name</span>
                     </small>
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
